# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serilizer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
