[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Renata Lamb <renatalamb95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.1"
factory-boy = "^3.3.0"
django = "^5.0.7"
django-rest-framework = "^0.1.0"
pytest-django = "^4.8.0"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
